RESOLVED FIXED216381
REGRESSION (Async overflow scroll): Mouse wheel scrolling over an "always-on" overflow scrollbar doesn't work
https://bugs.webkit.org/show_bug.cgi?id=216381
Summary REGRESSION (Async overflow scroll): Mouse wheel scrolling over an "always-on"...
Simon Fraser (smfr)
Reported 2020-09-10 15:02:12 PDT
REGRESSION (Async overflow scroll): Mouse wheel scrolling over an "always-on" overflow scrollbar doesn't work
Attachments
Patch (17.63 KB, patch)
2020-09-10 15:03 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-09-10 15:03:06 PDT
Simon Fraser (smfr)
Comment 2 2020-09-10 15:03:09 PDT
EWS
Comment 3 2020-09-11 08:39:07 PDT
Committed r266923: <https://trac.webkit.org/changeset/266923> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408480 [details].
Note You need to log in before you can comment on or make changes to this bug.